# starcraftclone

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  config.ini  package.json  starcraft
.github/ISSUE_TEMPLATE/: bug-report.md
art/: README.md
docs/: CONTRIBUTING.md  README.md
sounds/: README.md
src/: achievements.h  bosses.h  campaign.h  chat.h  console.h  daynight.h  difficulty.h  game.js  inventory.h  leaderboard.h  main.cpp  main.js  minimap.h  network.h  particles.h  powerups.h  sound.h  specials.h  stats.h  upgrades.h  utils.js  weather.h
starcraft_mod/: BUILD_AND_RUN.md  README.md  config.json  convert_models.sh  generate_sounds.sh  generate_textures.sh  make_maps.sh  mod.js  modinfo.lua  units.json
starcraft_mod/gamedata/: resources.lua
starcraft_mod/gamedata/ai/: advanced_ai.lua  simple_ai.lua
starcraft_mod/gamedata/rules/: mission.lua  research.lua
starcraft_mod/gamedata/scripts/: barracks.lua  command_center.lua  factory.lua  fighter.lua  medic.lua  refinery.lua  worker.lua
starcraft_mod/gamedata/terrain/: terrainInfo.lua
starcraft_mod/gamedata/ui/: minimap.lua  resourceBar.lua  tooltip.lua  uiConfig.lua  unitHealth.lua
starcraft_mod/gamedata/unitdefs/: units.lua
tests/: game.test.js
unity-project/: README.md
unity-project/Assets/Scenes/: MainScene.unity
unity-project/Assets/Scripts/: BuildManager.cs  BuildPanel.cs  Building.cs  CameraController.cs  EnemyAI.cs  GameManager.cs  HealthBar.cs  KeyboardCommands.cs  MinimapRenderer.cs  UIManager.cs  (+4 more)
unity-project/ProjectSettings/: ProjectSettings.asset
